--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,16 +10,16 @@
         android:layout_width="@dimen/list_item_height"
         android:layout_height="@dimen/list_item_height"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/book"
-        android:contentDescription="@string/img_content_descr" />
+        android:contentDescription="@string/img_content_descr"
+        android:src="@drawable/book" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/horizontal_spacing"
         android:layout_marginStart="@dimen/horizontal_spacing"
         android:layout_weight="1"
-        android:layout_gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
@@ -28,8 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:maxLines="1"
             android:text="@string/authors" />
 
         <TextView
@@ -38,8 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:maxLines="1"
             android:text="@string/title" />
 
         <TextView
@@ -48,8 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:maxLines="1"
             android:ellipsize="end"
+            android:maxLines="1"
             android:text="@string/publishing_info" />
 
         <LinearLayout
@@ -65,7 +65,8 @@
                 android:layout_gravity="center_vertical"
                 android:isIndicator="true"
                 android:numStars="5"
-                android:rating="0" />
+                android:rating="0"
+                android:stepSize="0.5" />
 
             <TextView
                 android:id="@+id/num_ratings"
