--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,35 +17,38 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
-    <Button
-        android:id="@+id/new_search_button"
-        style="@style/SearchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/emptylist_big_margin"
-        android:paddingEnd="@dimen/search_button_text_padding"
-        android:paddingLeft="@dimen/search_button_text_padding"
-        android:paddingRight="@dimen/search_button_text_padding"
-        android:paddingStart="@dimen/search_button_text_padding"
-        android:text="@string/new_search" />
-
-    <ListView
-        android:id="@+id/list"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/new_search_button">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    </ListView>
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"></ListView>
+
+        <Button
+            android:id="@+id/new_search_button"
+            style="@style/SearchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/button_height"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/button_top_margin"
+            android:paddingEnd="@dimen/search_button_text_padding"
+            android:paddingLeft="@dimen/search_button_text_padding"
+            android:paddingRight="@dimen/search_button_text_padding"
+            android:paddingStart="@dimen/search_button_text_padding"
+            android:text="@string/new_search" />
+
+    </LinearLayout>
 
     <!-- Layout of the EmptyView -->
     <LinearLayout
         android:id="@+id/empty_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/emptylist_big_margin"
+        android:layout_centerInParent="true"
         android:gravity="center"
         android:orientation="vertical">
 
