--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,13 +5,31 @@
     android:minHeight="@dimen/list_item_height"
     android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/book_cover_image"
+    <RelativeLayout
         android:layout_width="@dimen/list_item_height"
         android:layout_height="@dimen/list_item_height"
-        android:layout_gravity="center_vertical"
-        android:contentDescription="@string/img_content_descr"
-        android:src="@drawable/book" />
+        android:layout_margin="@dimen/list_item_thumbnail_padding">
+
+        <ImageView
+            android:id="@+id/book_cover_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/img_content_descr"
+            android:scaleType="centerCrop"
+            android:src="@drawable/book" />
+
+        <TextView
+            android:id="@+id/no_img_available"
+            android:layout_width="@dimen/list_item_no_img_available_txt_width"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="@string/no_img_available"
+            android:textAllCaps="true"
+            android:textSize="@dimen/list_item_no_img_available_txt_font_size"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="0dp"
