--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:hint="@string/search_hint"
+            android:imeOptions="actionDone"
             android:inputType="text" />
 
         <LinearLayout
@@ -76,6 +77,7 @@
                     android:layout_marginStart="@dimen/horizontal_spacing"
                     android:layout_weight="1"
                     android:hint="@string/search_hint"
+                    android:imeOptions="actionDone"
                     android:inputType="text" />
 
             </LinearLayout>
@@ -120,6 +122,7 @@
                     android:layout_marginStart="@dimen/horizontal_spacing"
                     android:layout_weight="1"
                     android:hint="@string/search_hint"
+                    android:imeOptions="actionDone"
                     android:inputType="text" />
 
             </LinearLayout>
