--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,9 +22,14 @@
     </style>
 
     <style name="SearchInstructions" parent="AppTheme">
-        <item name="android:textColor">@color/colorTextDarker</item>
+        <item name="android:textColor">@color/colorTitle</item>
         <item name="android:textSize">@dimen/search_instructions_font_size</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SearchOptions" parent="AppTheme">
+        <item name="android:textColor">@color/colorTextDarker</item>
+        <item name="android:textSize">@dimen/search_options_font_size</item>
     </style>
 
     <style name="EmptyListMessage" parent="AppTheme">
