--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,12 +13,14 @@
     <dimen name="horizontal_spacing">16dp</dimen>
 
     <!-- activity_main.xml -->
+    <dimen name="frame_padding">4dp</dimen>
     <dimen name="search_bar_font_size">14sp</dimen>
     <dimen name="search_instructions_font_size">16sp</dimen>
+    <dimen name="search_tip_font_size">13sp</dimen>
+    <dimen name="search_options_font_size">15sp</dimen>
     <dimen name="search_button_font_size">16sp</dimen>
     <dimen name="search_button_corner_radius">4dp</dimen>
     <dimen name="search_button_padding">4dp</dimen>
-    <dimen name="search_options_font_size">14sp</dimen>
 
     <!-- activity_search_results.xml -->
     <dimen name="button_top_margin">32dp</dimen>
