--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,152 +16,233 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            style="@style/SearchInstructions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/search_instructions_1" />
-
-        <EditText
-            android:id="@+id/key0"
-            style="@style/SearchBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:hint="@string/search_hint_keyword"
-            android:imeOptions="actionDone"
-            android:inputType="text" />
-
-        <TextView
-            style="@style/SearchInstructions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
-            android:text="@string/search_instructions_2" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="@drawable/frame_background"
+            android:orientation="vertical"
+            android:padding="@dimen/frame_padding">
 
-            <RadioGroup
-                android:id="@+id/radio1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <RadioButton
-                    android:id="@+id/radio1_author"
-                    style="@style/SearchOptions"
+                <TextView
+                    style="@style/SearchInstructions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/radio_author" />
+                    android:text="@string/search_instructions_1" />
 
-                <RadioButton
-                    android:id="@+id/radio1_title"
-                    style="@style/SearchOptions"
+                <TextView
+                    style="@style/SearchTip"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/radio_title" />
+                    android:text="@string/search_tip_keyword" />
 
-            </RadioGroup>
+            </LinearLayout>
 
             <EditText
-                android:id="@+id/key1"
+                android:id="@+id/key0"
                 style="@style/SearchBar"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/horizontal_spacing"
-                android:layout_marginStart="@dimen/horizontal_spacing"
-                android:layout_weight="1"
-                android:hint="@string/search_hint_string"
+                android:hint="@string/search_hint_keyword"
                 android:imeOptions="actionDone"
                 android:inputType="text" />
 
         </LinearLayout>
 
-        <TextView
-            style="@style/SearchInstructions"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
-            android:text="@string/search_instructions_2" />
+            android:background="@drawable/frame_background"
+            android:orientation="vertical"
+            android:padding="@dimen/frame_padding">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/SearchInstructions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_instructions_2" />
+
+                <TextView
+                    style="@style/SearchTip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_tip_string" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioGroup
+                    android:id="@+id/radio1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/radio1_author"
+                        style="@style/SearchOptions"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/radio_author" />
+
+                    <RadioButton
+                        android:id="@+id/radio1_title"
+                        style="@style/SearchOptions"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/radio_title" />
+
+                </RadioGroup>
+
+                <EditText
+                    android:id="@+id/key1"
+                    style="@style/SearchBar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/horizontal_spacing"
+                    android:layout_marginStart="@dimen/horizontal_spacing"
+                    android:layout_weight="1"
+                    android:hint="@string/search_hint_string"
+                    android:imeOptions="actionDone"
+                    android:inputType="text" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/vertical_spacing_between_content_areas"
-            android:orientation="horizontal">
+            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
+            android:background="@drawable/frame_background"
+            android:orientation="vertical"
+            android:padding="@dimen/frame_padding">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/SearchInstructions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_instructions_2" />
+
+                <TextView
+                    style="@style/SearchTip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search_tip_string" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioGroup
+                    android:id="@+id/radio2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <RadioButton
+                        android:id="@+id/radio2_author"
+                        style="@style/SearchOptions"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/radio_author" />
+
+                    <RadioButton
+                        android:id="@+id/radio2_title"
+                        style="@style/SearchOptions"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/radio_title" />
+
+                </RadioGroup>
+
+                <EditText
+                    android:id="@+id/key2"
+                    style="@style/SearchBar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/horizontal_spacing"
+                    android:layout_marginStart="@dimen/horizontal_spacing"
+                    android:layout_weight="1"
+                    android:hint="@string/search_hint_string"
+                    android:imeOptions="actionDone"
+                    android:inputType="text" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
+            android:background="@drawable/frame_background"
+            android:orientation="vertical"
+            android:padding="@dimen/frame_padding">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/SearchInstructions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/order" />
+
+            </LinearLayout>
 
             <RadioGroup
-                android:id="@+id/radio2"
+                android:id="@+id/radio3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <RadioButton
-                    android:id="@+id/radio2_author"
+                    android:id="@+id/radio3_relevance"
                     style="@style/SearchOptions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/radio_author" />
+                    android:text="@string/relevance" />
 
                 <RadioButton
-                    android:id="@+id/radio2_title"
+                    android:id="@+id/radio3_date"
                     style="@style/SearchOptions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/radio_title" />
+                    android:text="@string/date" />
 
             </RadioGroup>
 
-            <EditText
-                android:id="@+id/key2"
-                style="@style/SearchBar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/horizontal_spacing"
-                android:layout_marginStart="@dimen/horizontal_spacing"
-                android:layout_weight="1"
-                android:hint="@string/search_hint_string"
-                android:imeOptions="actionDone"
-                android:inputType="text" />
-
         </LinearLayout>
-
-        <TextView
-            style="@style/SearchInstructions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
-            android:text="@string/order" />
-
-        <RadioGroup
-            android:id="@+id/radio3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/vertical_spacing_between_content_areas">
-
-            <RadioButton
-                android:id="@+id/radio3_relevance"
-                style="@style/SearchOptions"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/relevance" />
-
-            <RadioButton
-                android:id="@+id/radio3_date"
-                style="@style/SearchOptions"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/date" />
-
-        </RadioGroup>
 
         <FrameLayout
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/button_touch_target_height"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/vertical_spacing_between_content_areas">
 
             <RelativeLayout
@@ -188,9 +269,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-
                     android:layout_toEndOf="@id/search_icon"
                     android:layout_toRightOf="@id/search_icon"
+                    android:paddingEnd="@dimen/search_button_padding"
+                    android:paddingRight="@dimen/search_button_padding"
                     android:text="@string/search" />
 
             </RelativeLayout>
