--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#004D40</color>
+    <color name="colorPrimary">#006064</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#00E5FF</color>
+    <color name="colorAccent">#00BCD4</color>
 
-    <color name="colorText">#424242</color>
+    <color name="colorText">#616161</color>
     <color name="colorTextDarker">#212121</color>
 
-    <color name="colorTitle">#00695C</color>
+    <color name="colorTitle">#00838F</color>
     <color name="colorStars">#00E5FF</color>
 
-    <color name="colorButton">#004D40</color>
+    <color name="colorButton">#006064</color>
 
-    <color name="colorFrameBackground">#B2DFDB</color>
+    <color name="colorFrameBackground">#E0F7FA</color>
     <color name="colorSearchInstructions">#000000</color>
-    <color name="colorSearchTip">#004D40</color>
+    <color name="colorSearchTip">#006064</color>
 </resources>
